# shader_sandy

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp
data/: frag.glsl  kawaii.mtl  vertex.glsl
